--- a/index.html
+++ b/index.html
@@ -7,7 +7,5 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>My Portfolio</title>
   </head>
-  <body>
-    <p>Hello World from my laptop!</p>
-  </body>
+  <body></body>
 </html>
