--- a/index.html
+++ b/index.html
@@ -7,5 +7,23 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>My Portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Begin Hero header-->
+    <header class="hero-box">
+      <section class="hero-image-box">
+        <video
+          class="hero-video"
+          src="img/Ocean.mp4"
+          autoplay
+          muted
+          loop
+        ></video>
+      </section>
+      <section class="hero-text-box">
+        <h1 class="hero-heading">Creativity Like The Ocean</h1>
+        <p class="hero-text">Surf on with Hadi's creative projects</p>
+      </section>
+    </header>
+    <!-- End Hero header-->
+  </body>
 </html>
