--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <section class="hero-image-box">
         <video
           class="hero-video"
-          src="img/Ocean.mp4"
+          src="img/Ocean1.mp4"
           autoplay
           muted
           loop
