--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/glightbox.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
     <title>My Portfolio</title>
   </head>
   <body>
@@ -97,6 +98,38 @@
       </section>
     </section>
     <!-- End Portfolio -->
+
+    <!-- Begin About -->
+    <section class="about-container">
+      <section class="about-text">
+        <h1>Hadi Naba creates projects for university</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
+          provident accusantium quae neque aperiam, praesentium cupiditate
+          accusamus, laboriosam error labore veniam dolore ad dolor repellendus?
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, minus?
+          Dolore unde illo quidem totam.
+        </p>
+        <p><a href="mailto:email@example.com">Email me</a> email@example.com</p>
+        <div class="about-social">
+          <a href="https://twitter.com/Hadi" aria-label="Link to Twitter"
+            ><i class="fab fa-twitter" aria-hidden="true"> </i
+          ></a>
+          <a href="https://instagram.com/Hadi" aria-label="Link to Instagram"
+            ><i class="fab fa-instagram" aria-hidden="true"> </i
+          ></a>
+          <a href="https://facebook.com/Hadi" aria-label="Link to Facebook"
+            ><i class="fab fa-facebook" aria-hidden="true"> </i
+          ></a>
+        </div>
+      </section>
+      <section class="about-image">
+        <img src="img/hadi.JPG" alt="Hadi Naba Profile Picture" />
+      </section>
+    </section>
+    <!-- End About -->
     <script src="js/glightbox.min.js"></script>
     <script type="text/javascript">
       const lightbox = GLightbox({ loop: true });
