--- a/index.html
+++ b/index.html
@@ -126,9 +126,7 @@
       <section class="about-text">
         <h1>Hadi Naba creates projects for university</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
-          provident accusantium quae neque aperiam, praesentium cupiditate
-          accusamus, laboriosam error labore veniam dolore ad dolor repellendus?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate totam inventore esse autem quos aut at a odio. Commodi eligendi nulla natus exercitationem, iste beatae?
         </p>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, minus?
